<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AndroidDashboard!</string>
    <string name="app_name">Like2Feel</string>
    <string name="registrar">Registrar</string>
    <string name="nombreC">Nombre</string>
    <string name="User">Usuario/Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="Bregistrar">Registrar</string>
    <string name="MuserR">Ya estoy Registrado/Iniciar Sesion</string>
    <string name="MuserNR">No Estoy Registrado/Registrarme</string>
    <string name="IniSesion">Iniciar Sesion</string>
    <string name="Titulologin">like2feel</string>
    <string name="Saludo">BIENVENIDO!</string>
    <string name="Salir">Salir</string>
    <string name="DescripcionLt">logo en texto</string>
    <string name="correo">rr</string>
    <string name="pass">rr</string>
    
    <string name="LoguinButton">Ingresar</string>
    <string name="RadioButton1">Masculino</string>
    <string name="RadioButton2">Femenino</string>
    
    <string name="CheckBox1">Yeah1!</string>
    <string name="CheckBox2">Yeah2!</string>
    <string name="CheckBox3">Yeah3!</string>
    
    
    <string name="spPais">Mamamia</string>
    <string-array name="arrayPaises">
       <item>Ninguno</item>
       <item>Alemania</item>
       <item>Argentina</item>
       <item>Brasil</item>
       <item>España</item>
       <item>Francia</item>
       <item>Italia</item>
       <item>Mexico</item>
       <item>Peru</item>
   </string-array>
    
     <string name="ButtonS">SpiPic</string>
    
    <string name="cargarIm">Cargar Imagenes</string>
    <string name="desc">logo beta de la aplicacion</string>
    <string name="SaludoNot">Te Quiero Mucho!!</string>
    
    <!-- actividades -->
    <string name="cargarListaIma">listaImag</string>
    <string name="hug">Think-Feel</string>
    <string name="tituloVentanaLogeo">Iniciar Sesion</string>
    <string name="tituloVentanaRegistrar">Registrar Usuario</string>
    <string name="notified">Preciona para Ver!</string>
    
    <string name="menu_settings">Configurar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_preference">Background color</string>
    <string name="default_text_value">White</string>
    <string name="text_pref_summary">Change the background color</string>
    <string name="settings">Settings</string>
    <string name="click_menu">Click menu</string>
    
    <string-array name="colors">
        <item>White</item>
        <item>Black</item>
        <item>Grey</item>
        
    </string-array>
    <string name="contentdescription">contentDescription</string>
    <string name="with_image">With image</string>
    <string name="activity_with_a_little_image">Activity with a little image</string>
    <string name="noimage">off</string>
    
    <string name="menuOpc"></string>
    <string name="menuOpc1"></string>
    <string name="MenuOpc"></string>

</resources>