<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/LinearLayo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dip" >

		<!--  View Title Label -->
         <!-- Logo Start-->

         <ImageView
             android:contentDescription="@string/DescripcionLt"
             android:layout_width="259dp"
             android:layout_height="76dp"
             android:layout_marginLeft="10dip"
             android:src="@drawable/logo" />

        <!-- Logo Ends -->
		<!--  Email Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/User" />
		<!--  Email TextField -->

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            android:text="@string/correo" />
        
		<!--  Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/contrasena" />
		<!--  Password TextField -->
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" 
            android:text="@string/pass"/>
        
        <!--  Error message -->
        <TextView android:id="@+id/login_error"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:textColor="#e30000"
            		android:padding="10dip"
            		android:textStyle="bold"/>

		<!--  Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:height="38dp"
            android:text="@string/LoguinButton" />
        
        <!--android:drawableTop="@drawable/llave"-->

        <!--  Link to Registration Screen -->
        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/MuserNR"
            android:textColor="#0b84aa"
            
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/menuOpc" />
			
			 <com.facebook.android.LoginButton
        android:id="@+id/btnFbLogin"
        android:src="@drawable/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_height="wrap_content"
        android:text="Facebook status: sesión no iniciada"
        android:id="@+id/txtFbStatus"
        android:layout_width="fill_parent"></TextView>
    <View
        android:layout_height="1dip"
        android:layout_width="fill_parent"
        android:background="#FFFFFF"
    />

    </LinearLayout>

</ScrollView>