<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/LinearLay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dip" >

        <!-- Logo Start -->

        <RelativeLayout
            android:id="@+id/RelaLay"
            android:layout_width="fill_parent"
            android:layout_height="264dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="277dp"
                android:layout_height="84dp"
                android:layout_marginLeft="90dip"
                android:contentDescription="@string/desc"
                android:src="@drawable/logo" />

            <!-- Logo Ends -->
            <!-- View Title Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:text="@string/registrar"
                android:textSize="25dip"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView1"
                android:layout_alignParentLeft="true"
                android:text="@string/nombreC" />

            <EditText
                android:id="@+id/registerName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imageView1"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/registerName"
                android:text="@string/User" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView1"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/registerEmail"
                android:text="@string/contrasena" />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView2"
                android:ems="10"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>

        </RelativeLayout>

        <!-- Name Label -->
        <!-- Name TextField -->

        <!-- Email Label -->

        <!-- Email TextField -->
        
        

        <!-- Password Label -->

        <!-- Password TextField -->

        <!-- Error message -->
		<!-- 
        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/RadioButton1" 
                android:textColor="#C3C2C2"/>

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton2"
                android:textColor="#C3C2C2" />
        </RadioGroup>
        -->

        <TextView
            android:id="@+id/register_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:textColor="#e30000"
            android:textStyle="bold" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/Bregistrar"
            />
        
         <!-- android:drawableBottom="@drawable/lapicito" -->
        

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="20dip"
            android:layout_weight="0.20"
            android:background="@null"
            android:text="@string/MuserR"
            android:textColor="#0b84aa"
            android:textStyle="bold" />

        <!-- android:textColor="#21dbd4" -->
		<!--  
        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ButtonS" />
            -->

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/menuOpc1" />

         <ImageView
             android:layout_width="246dp"
             android:layout_height="84dp"
             android:layout_marginLeft="90dip"
             android:layout_marginTop="10dip"
             android:contentDescription="@string/desc"
             android:src="@drawable/ic_launcher" />

    </LinearLayout>

</ScrollView>