<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  
    <RelativeLayout
        android:id="@+id/RelativeLayy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >
 
        <!--  Header Starts-->

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >
			
	            <!-- Logo Start -->

            <ImageView
                android:contentDescription="@string/DescripcionLt"
                android:layout_width="0dp"
                android:layout_height="76dp"
                android:layout_marginLeft="10dip"
                android:layout_weight="0.79"
                android:src="@drawable/logo" />

            <!-- Logo Ends -->
        </LinearLayout>
        
        

        <!--  Header Ends -->
 
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
		    android:layout_width="fill_parent"
		    android:layout_height="90dip"
		    
		    android:layout_alignParentBottom="true">
            
            
		</LinearLayout>
        <!-- Footer Ends -->
 
        <!-- componentes -->
        <LinearLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="20dip"
          android:layout_below="@id/header">
        <!-- etiquetas y botones -->
           <TextView android:layout_width="fill_parent"
        	  android:layout_height="wrap_content"
        	  android:text="@string/Saludo"
        	  android:textSize="30dip"
        	  android:gravity="center"
        	  android:layout_marginTop="20dip"/>
           <TextView
	        android:layout_height="wrap_content"
	        android:text="Facebook status: sesión no iniciada"
	        android:id="@+id/txtFbStatus"
	        android:textSize="15dip"
	        android:gravity="center"
	        android:layout_width="fill_parent"></TextView>

	    <Button
	        android:id="@+id/btnImg"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/cargarIm" 
	        android:textSize="20dip"
	        android:gravity="center"
	        android:textStyle="bold" 
	        android:layout_marginTop="40dip"/>
	    
	    
	    <com.example.aplication.Facebook.LoginButton
	        android:id="@+id/btnFbLogin"
	        android:src="@drawable/login_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="80dip"
	        />
	   		 
	   		 
	   		 
	    <Button android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/Salir"
	        android:textSize="20dip"
	        android:textStyle="bold" 
	        android:id="@+id/btnLogout"
	        android:layout_marginTop="80dip"
	        android:background="@null"/>
	        <!-- componentes Ends -->
	    </LinearLayout>
	 </RelativeLayout>
 </ScrollView>